kubernetes/apps/konflate/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/httproute.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate
  namespace: konflate
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://konflate.konflate.svc.cluster.local:8080
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - konflate.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: konflate
          port: 8080
